[gd_scene load_steps=56 format=2]

[ext_resource path="res://Scripts/MenuBG.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ItemLoad.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MenuPopUp.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CameraGimbal.gd" type="Script" id=4]
[ext_resource path="res://Meshes/Portrait01.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Meshes/sophie-arnould-als-iphigenie/Arnould.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Meshes/christoph-willibald-ritter-von-gluck/Gluck.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Textures/Susie03.png" type="Texture" id=8]
[ext_resource path="res://Textures/Susie_Thumb_hover.png" type="Texture" id=9]
[ext_resource path="res://Textures/Susie06.png" type="Texture" id=10]
[ext_resource path="res://Textures/Susie02.png" type="Texture" id=11]
[ext_resource path="res://Textures/hdri/museum_of_ethnography.hdr" type="Texture" id=12]
[ext_resource path="res://Textures/Gluck_Diffuse.png" type="Texture" id=13]
[ext_resource path="res://Textures/hdri/music_hall_02.hdr" type="Texture" id=14]
[ext_resource path="res://Textures/hdri/de_balie.hdr" type="Texture" id=15]
[ext_resource path="res://Textures/Gluck_Thumb_normal.png" type="Texture" id=16]
[ext_resource path="res://Textures/hdri/old_hall.hdr" type="Texture" id=17]
[ext_resource path="res://Textures/Susie05.png" type="Texture" id=18]
[ext_resource path="res://Textures/Susie01.png" type="Texture" id=19]
[ext_resource path="res://Textures/Susie04.png" type="Texture" id=20]
[ext_resource path="res://Textures/Susie_Thumb_normal.png" type="Texture" id=21]
[ext_resource path="res://Textures/Gluck_AO.png" type="Texture" id=22]
[ext_resource path="res://Textures/Arnould_Thumb_normal.png" type="Texture" id=23]
[ext_resource path="res://Textures/Arnould_Thumb_hover.png" type="Texture" id=24]
[ext_resource path="res://Textures/Gluck_Thumb_hover.png" type="Texture" id=25]
[ext_resource path="res://Textures/Gluck_Roughness.png" type="Texture" id=26]
[ext_resource path="res://Textures/Gluck_Normal.png" type="Texture" id=27]
[ext_resource path="res://Fonts/Calibri Regular.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://Fonts/Calibri Light.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://Fonts/Calibri Bold.TTF" type="DynamicFontData" id=30]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 13 )
metallic = 1.0
metallic_specular = 1.0
metallic_texture = ExtResource( 26 )
metallic_texture_channel = 4
roughness_texture = ExtResource( 26 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 27 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 22 )
ao_on_uv2 = false
ao_texture_channel = 0

[sub_resource type="SpatialMaterial" id=38]
resource_name = "Rahmen"
albedo_color = Color( 0.180392, 0.180392, 0.180392, 1 )
metallic = 0.5
metallic_specular = 1.0

[sub_resource type="AnimatedTexture" id=39]
flags = 23
frames = 6
frame_0/texture = ExtResource( 19 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 20 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 18 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 10 )
frame_5/delay_sec = 0.0

[sub_resource type="SpatialMaterial" id=2]
resource_name = "Bild"
flags_unshaded = true
albedo_color = Color( 0.8, 0.8, 0.8, 1 )
albedo_texture = SubResource( 39 )

[sub_resource type="SpatialMaterial" id=3]
resource_name = "Ruecken"
albedo_color = Color( 0.215686, 0.188235, 0.105882, 1 )
metallic_specular = 0.0

[sub_resource type="PanoramaSky" id=40]
resource_local_to_scene = true
panorama = ExtResource( 17 )

[sub_resource type="Environment" id=41]
background_mode = 2
background_sky = SubResource( 40 )

[sub_resource type="Theme" id=34]
VBoxContainer/constants/separation = 0

[sub_resource type="Theme" id=35]
HBoxContainer/constants/separation = 0

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 29 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.745098, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=21]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 0.501961 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/fonts/font = SubResource( 18 )
Button/styles/disabled = SubResource( 22 )
Button/styles/focus = SubResource( 23 )
Button/styles/hover = SubResource( 24 )
Button/styles/normal = SubResource( 19 )
Button/styles/pressed = SubResource( 20 )

[sub_resource type="ButtonGroup" id=33]

[sub_resource type="DynamicFont" id=10]
resource_local_to_scene = true
size = 36
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=11]
size = 36
font_data = ExtResource( 30 )

[sub_resource type="Theme" id=12]
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/fonts/bold_font = SubResource( 10 )
RichTextLabel/fonts/normal_font = SubResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 28 )

[sub_resource type="Theme" id=17]
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/fonts/bold_font = SubResource( 15 )
RichTextLabel/fonts/normal_font = SubResource( 16 )

[sub_resource type="Theme" id=36]

[sub_resource type="ButtonGroup" id=37]

[node name="Spatial" type="Spatial"]
__meta__ = {
"_edit_horizontal_guides_": [ 72.0 ]
}

[node name="Meshes" type="Spatial" parent="."]

[node name="Arnould" type="MeshInstance" parent="Meshes"]
transform = Transform( 11, 0, 0, 0, 11, 0, 0, 0, 11, 0, -5, 0 )
mesh = ExtResource( 6 )

[node name="Gluck" type="MeshInstance" parent="Meshes"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -5, 0 )
visible = false
mesh = ExtResource( 7 )
material/0 = SubResource( 1 )

[node name="Portrait" type="MeshInstance" parent="Meshes"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false
mesh = ExtResource( 5 )
material/0 = SubResource( 38 )
material/1 = SubResource( 2 )
material/2 = SubResource( 3 )

[node name="CameraGimbal" type="Spatial" parent="."]
script = ExtResource( 4 )
target = NodePath("../Meshes")
rotation_speed = 1.0
mouse_control = true

[node name="InnerGimbal" type="Spatial" parent="CameraGimbal"]

[node name="Camera" type="Camera" parent="CameraGimbal/InnerGimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 5 )
light_color = Color( 1, 0.945828, 0.863281, 1 )
light_specular = 1.0
omni_range = 100.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -5, -5 )
light_color = Color( 0.819608, 0.945098, 1, 1 )
light_energy = 0.5
light_specular = 1.0
omni_range = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 41 )

[node name="Control" type="Control" parent="."]
anchor_top = 0.083
anchor_bottom = 0.083
margin_top = -66.4
margin_right = 600.0
margin_bottom = 733.6
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 600.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 34 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme = SubResource( 35 )

[node name="=" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "â‰¡"

[node name="01" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
pressed = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "01"
script = ExtResource( 1 )
bkg_tex = ExtResource( 17 )
WorldEnvironment = NodePath("../../../../WorldEnvironment")

[node name="02" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 300.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "02"
script = ExtResource( 1 )
bkg_tex = ExtResource( 12 )
WorldEnvironment = NodePath("../../../../WorldEnvironment")

[node name="03" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "03"
script = ExtResource( 1 )
bkg_tex = ExtResource( 14 )
WorldEnvironment = NodePath("../../../../WorldEnvironment")

[node name="04" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "04"
script = ExtResource( 1 )
bkg_tex = ExtResource( 15 )
WorldEnvironment = NodePath("../../../../WorldEnvironment")

[node name="05" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 600.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
theme = SubResource( 21 )
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 33 )
text = "05"

[node name="PopUpInfo" type="ColorRect" parent="Control/VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 600.0
margin_bottom = 419.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="TitleContainer" type="ColorRect" parent="Control/VBoxContainer/PopUpInfo"]
margin_right = 600.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Title" type="RichTextLabel" parent="Control/VBoxContainer/PopUpInfo/TitleContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 70.0
rect_clip_content = false
theme = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "Klassik Stiftung Weimar"
text = "Klassik Stiftung Weimar"

[node name="InfoTitle" type="RichTextLabel" parent="Control/VBoxContainer/PopUpInfo"]
margin_left = 20.0
margin_top = 87.0
margin_right = 580.0
margin_bottom = 137.0
rect_clip_content = false
theme = SubResource( 17 )
text = "Sophie Arnould als Iphigenie"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InfoText" type="RichTextLabel" parent="Control/VBoxContainer/PopUpInfo"]
margin_left = 20.0
margin_top = 137.0
margin_right = 580.0
margin_bottom = 702.0
theme = SubResource( 17 )
text = "Sophie Arnould als Iphigenie Die Klassik Stiftung Weimar bewahrt in ihren Sammlungen einen einzigartigen Fundus, der zum Kern des nationalen Kulturerbes gehÃ¶rt. Ein zentrales Ziel der Klassik Stiftung Weimar ist es, noch stÃ¤rker mit den vielfÃ¤ltigen Themen der Stiftung im digitalen Raum vertreten zu sein. Im Rahmen des 3D-Hackathons stellen die Museen ein Daten-Set zu zwei herausragenden Houdon-BÃ¼sten zur VerfÃ¼gung. Aktuelle Forschungsfragen bilden die Grundlage fÃ¼r aufwendige Digitalisierungsverfahren an ausgewÃ¤hlten Museumsobjekten. In verschiedenen Bereichen der Museumsarbeit â€“ Wissenschaft, Vermittlung und Restaurierung â€“ setzen u.a. Photogrammetrie und 3D-Modellierungen neue Standards hinsichtlich einer umfassenden ObjekterschlieÃŸung. Diese innovativen DigitalisierungsmÃ¶glichkeiten bieten einen Zugang zum Museumsgut, der bislang nur objekt- bzw. ortsgebunden gewÃ¤hrt werden konnte."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopUpOverview" type="ColorRect" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 600.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer/PopUpOverview"]
margin_left = 20.0
margin_top = 100.0
margin_right = 580.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer"]
margin_right = 548.0
margin_bottom = 1200.0
rect_min_size = Vector2( 0, 1200 )
size_flags_horizontal = 3

[node name="Museum01" type="RichTextLabel" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_right = 560.0
margin_bottom = 50.0
rect_clip_content = false
theme = SubResource( 17 )
text = "Klassik Stiftung Weimar"

[node name="Museum02" type="RichTextLabel" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_top = 300.0
margin_right = 560.0
margin_bottom = 350.0
rect_clip_content = false
theme = SubResource( 17 )
text = "Preussische Kultur Stiftung Bildarchiv"

[node name="Museum03" type="RichTextLabel" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_top = 600.0
margin_right = 560.0
margin_bottom = 650.0
rect_clip_content = false
theme = SubResource( 17 )
text = "Glasmosaik"

[node name="Museum04" type="RichTextLabel" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_top = 900.0
margin_right = 560.0
margin_bottom = 950.0
rect_clip_content = false
theme = SubResource( 17 )
text = "Museum fÃ¼r Naturkunde"

[node name="TextureButton1" type="TextureButton" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_top = 40.0
margin_right = 800.0
margin_bottom = 840.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 36 )
toggle_mode = true
pressed = true
action_mode = 0
group = SubResource( 37 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 23 )
script = ExtResource( 2 )
info_title = "Sophie Arnould als Iphigenie"
info_text = "Sophie Arnould als Iphigenie Die Klassik Stiftung Weimar bewahrt in ihren Sammlungen einen einzigartigen Fundus, der zum Kern des nationalen Kulturerbes gehÃ¶rt. Ein zentrales Ziel der Klassik Stiftung Weimar ist es, noch stÃ¤rker mit den vielfÃ¤ltigen Themen der Stiftung im digitalen Raum vertreten zu sein. Im Rahmen des 3D-Hackathons stellen die Museen ein Daten-Set zu zwei herausragenden Houdon-BÃ¼sten zur VerfÃ¼gung. Aktuelle Forschungsfragen bilden die Grundlage fÃ¼r aufwendige Digitalisierungsverfahren an ausgewÃ¤hlten Museumsobjekten. In verschiedenen Bereichen der Museumsarbeit â€“ Wissenschaft, Vermittlung und Restaurierung â€“ setzen u.a. Photogrammetrie und 3D-Modellierungen neue Standards hinsichtlich einer umfassenden ObjekterschlieÃŸung. Diese innovativen DigitalisierungsmÃ¶glichkeiten bieten einen Zugang zum Museumsgut, der bislang nur objekt- bzw. ortsgebunden gewÃ¤hrt werden konnte."
popup_title = "Klassik Stiftung Weimar"
TargetMesh = NodePath("../../../../../../Meshes/Arnould")
InfoTitle = NodePath("../../../../PopUpInfo/InfoTitle")
InfoText = NodePath("../../../../PopUpInfo/InfoText")
Title = NodePath("../../../../PopUpInfo/TitleContainer/Title")

[node name="TextureButton2" type="TextureButton" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_left = 275.0
margin_top = 40.0
margin_right = 1075.0
margin_bottom = 840.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 36 )
toggle_mode = true
action_mode = 0
group = SubResource( 37 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 25 )
texture_disabled = ExtResource( 16 )
script = ExtResource( 2 )
info_title = "Christoph Willibald Ritter von Gluck"
info_text = "Die Klassik Stiftung Weimar bewahrt in ihren Sammlungen einen einzigartigen Fundus, der zum Kern des nationalen Kulturerbes gehÃ¶rt. Ein zentrales Ziel der Klassik Stiftung Weimar ist es, noch stÃ¤rker mit den vielfÃ¤ltigen Themen der Stiftung im digitalen Raum vertreten zu sein. Im Rahmen des 3D-Hackathons stellen die Museen ein Daten-Set zu zwei herausragenden Houdon-BÃ¼sten zur VerfÃ¼gung. Aktuelle Forschungsfragen bilden die Grundlage fÃ¼r aufwendige Digitalisierungsverfahren an ausgewÃ¤hlten Museumsobjekten. In verschiedenen Bereichen der Museumsarbeit â€“ Wissenschaft, Vermittlung und Restaurierung â€“ setzen u.a. Photogrammetrie und 3D-Modellierungen neue Standards hinsichtlich einer umfassenden ObjekterschlieÃŸung. Diese innovativen DigitalisierungsmÃ¶glichkeiten bieten einen Zugang zum Museumsgut, der bislang nur objekt- bzw. ortsgebunden gewÃ¤hrt werden konnte."
popup_title = "Klassik Stiftung Weimar"
TargetMesh = NodePath("../../../../../../Meshes/Gluck")
InfoTitle = NodePath("../../../../PopUpInfo/InfoTitle")
InfoText = NodePath("../../../../PopUpInfo/InfoText")
Title = NodePath("../../../../PopUpInfo/TitleContainer/Title")

[node name="TextureButton3" type="TextureButton" parent="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control"]
margin_top = 340.0
margin_right = 800.0
margin_bottom = 1140.0
rect_scale = Vector2( 0.3, 0.3 )
theme = SubResource( 36 )
toggle_mode = true
action_mode = 0
group = SubResource( 37 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 21 )
script = ExtResource( 2 )
info_title = "Digitale Zeichnung Animation"
info_text = "Digitale Zeichnung Animation Die Klassik Stiftung Weimar bewahrt in ihren Sammlungen einen einzigartigen Fundus, der zum Kern des nationalen Kulturerbes gehÃ¶rt. Ein zentrales Ziel der Klassik Stiftung Weimar ist es, noch stÃ¤rker mit den vielfÃ¤ltigen Themen der Stiftung im digitalen Raum vertreten zu sein. Im Rahmen des 3D-Hackathons stellen die Museen ein Daten-Set zu zwei herausragenden Houdon-BÃ¼sten zur VerfÃ¼gung. Aktuelle Forschungsfragen bilden die Grundlage fÃ¼r aufwendige Digitalisierungsverfahren an ausgewÃ¤hlten Museumsobjekten. In verschiedenen Bereichen der Museumsarbeit â€“ Wissenschaft, Vermittlung und Restaurierung â€“ setzen u.a. Photogrammetrie und 3D-Modellierungen neue Standards hinsichtlich einer umfassenden ObjekterschlieÃŸung. Diese innovativen DigitalisierungsmÃ¶glichkeiten bieten einen Zugang zum Museumsgut, der bislang nur objekt- bzw. ortsgebunden gewÃ¤hrt werden konnte."
popup_title = "Preussische Kultur Stiftung Bildarchiv"
TargetMesh = NodePath("../../../../../../Meshes/Portrait")
InfoTitle = NodePath("../../../../PopUpInfo/InfoTitle")
InfoText = NodePath("../../../../PopUpInfo/InfoText")
Title = NodePath("../../../../PopUpInfo/TitleContainer/Title")

[node name="TitleContainer" type="ColorRect" parent="Control/VBoxContainer/PopUpOverview"]
margin_right = 600.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Title" type="RichTextLabel" parent="Control/VBoxContainer/PopUpOverview/TitleContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 70.0
rect_clip_content = false
theme = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[b]Ãœbersicht Kunstobjekte[/b]"
text = "Ãœbersicht Kunstobjekte"

[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/=" to="Control" method="_on_RadioButton_toggled" binds= [ "/root/Spatial/Control/VBoxContainer/PopUpOverview", "/root/Spatial/Control/VBoxContainer/PopUpInfo" ]]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/01" to="Control/VBoxContainer/HBoxContainer/01" method="_on_RadioButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/02" to="Control/VBoxContainer/HBoxContainer/02" method="_on_RadioButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/03" to="Control/VBoxContainer/HBoxContainer/03" method="_on_RadioButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/04" to="Control/VBoxContainer/HBoxContainer/04" method="_on_RadioButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/05" to="Control" method="_on_RadioButton_toggled" binds= [ "/root/Spatial/Control/VBoxContainer/PopUpInfo", "/root/Spatial/Control/VBoxContainer/PopUpOverview" ]]
[connection signal="toggled" from="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton1" to="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton1" method="_on_TextureButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton2" to="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton2" method="_on_TextureButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton3" to="Control/VBoxContainer/PopUpOverview/ScrollContainer/Control/TextureButton3" method="_on_TextureButton_toggled"]
